[gd_scene load_steps=14 format=2]

[ext_resource path="res://models/Arena/Oven.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/Arena/OvenDoors.tscn" type="PackedScene" id=2]
[ext_resource path="res://models/Arena/FP_Base.tscn" type="PackedScene" id=3]
[ext_resource path="res://models/Arena/FP_Blender.tscn" type="PackedScene" id=4]
[ext_resource path="res://models/Arena/FP_Bowl.tscn" type="PackedScene" id=5]
[ext_resource path="res://models/Arena/FP_Small_Blender.tscn" type="PackedScene" id=6]
[ext_resource path="res://models/Arena/FP_Window.tscn" type="PackedScene" id=7]
[ext_resource path="res://models/Arena/Knob.tscn" type="PackedScene" id=8]
[ext_resource path="res://models/Arena/FoodProcessor.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FP_Blender/FP_Blender_Liquid:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FP_Small_Blender/FP_Small_Blender_Liquid:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -360, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FP_Bowl/FP_Stirrer:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Knob:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -360 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "CloseDoors"
tracks/0/type = "value"
tracks/0/path = NodePath("OvenDoors:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1.31814, 14.2193, -7.28209 ), Vector3( 1.318, 7.48, -7.282 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("OvenDoors:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1.31814, 7.47968, -7.28209 ), Vector3( 1.31814, 14.2193, -7.28209 ) ]
}

[sub_resource type="BoxShape" id=4]
extents = Vector3( 7.35786, 3.03569, 3.32425 )

[node name="FoodProcessor" type="Spatial"]
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Oven" parent="." instance=ExtResource( 1 )]
collision_mask = 0

[node name="OvenDoors" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.4, 1.31814, 14.2193, -7.28209 )
collision_mask = 0

[node name="FP_Base" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.745, -3.54066 )

[node name="FP_Blender" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.97602, 17.4022, -3.56352 )
collision_layer = 4
collision_mask = 0

[node name="FP_Bowl" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1703, 11.0059, -3.5365 )
collision_layer = 4
collision_mask = 0

[node name="FP_Small_Blender" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.18166, 18.1596, -3.58146 )
collision_layer = 4
collision_mask = 0

[node name="FP_Window" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.93578, 12.3528, -5.03057 )
collision_mask = 0

[node name="Knob" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.04626, 15.2604, -5.1814 )

[node name="Spinning" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )

[node name="Doors" type="AnimationPlayer" parent="."]
anims/CloseDoors = SubResource( 2 )
anims/OpenDoors = SubResource( 3 )

[node name="ChefRespawn" type="Spatial" parent="."]
transform = Transform( 0.997146, -0.0755009, 0, 0.0755009, 0.997146, 0, 0, 0, 1, -1.96894, 10.811, -3.7097 )

[node name="InvisibleWall" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.18981, 0 )
input_ray_pickable = false
collision_layer = 32
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="InvisibleWall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00221872, 0.866198, -3.46726 )
shape = SubResource( 4 )

[node name="Explosions" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.18628, -7.43956 )

[node name="Explosions_timer" type="Timer" parent="Explosions"]
[connection signal="timeout" from="Explosions/Explosions_timer" to="." method="_on_Explosions_timer_timeout"]

[editable path="FP_Blender"]

[editable path="FP_Bowl"]

[editable path="FP_Small_Blender"]
